[gd_scene load_steps=6 format=2]

[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="NameFIeld" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = -200.0
margin_right = 309.0
margin_bottom = -115.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "enter your name"

[node name="ConnectServerBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -70.0
margin_right = 175.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "connect server"

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 218.0
custom_fonts/font = SubResource( 4 )
text = "Client Version 0.0.1"
align = 1
valign = 1

[connection signal="pressed" from="ConnectServerBtn" to="." method="_on_ConnectServerBtn_pressed"]
